@@ -1,0 +1,51 @@
+#Latitude	Longitude	Continent	Source	Color_index	Angle_start_at	Angle	Value	Continent_total
+55.0	85.0	"ASIA (EXCL. MIDDLE EAST)"	Coal	0	215.410	144.590	947639	2362223
+55.0	85.0	"ASIA (EXCL. MIDDLE EAST)"	Oil	1	154.375	61.034	400017	2362223
+55.0	85.0	"ASIA (EXCL. MIDDLE EAST)"	Gas	2	112.828	41.544	272284	2362223
+55.0	85.0	"ASIA (EXCL. MIDDLE EAST)"	Nuclear	3	94.921	17.906	117365	2362223
+55.0	85.0	"ASIA (EXCL. MIDDLE EAST)"	Hydroelectric	4	88.182	6.739	44165	2362223
+55.0	85.0	"ASIA (EXCL. MIDDLE EAST)"	Renewable	5	0.000	88.182	577942	2362223
+17.0	-90.0	"C. AMERICA & CARIBBEAN"	Coal	0	353.272	6.728	4868	260434
+17.0	-90.0	"C. AMERICA & CARIBBEAN"	Oil	1	105.476	247.795	179261	260434
+17.0	-90.0	"C. AMERICA & CARIBBEAN"	Gas	2	49.774	55.703	40297	260434
+17.0	-90.0	"C. AMERICA & CARIBBEAN"	Nuclear	3	46.170	3.604	2607	260434
+17.0	-90.0	"C. AMERICA & CARIBBEAN"	Hydroelectric	4	40.363	5.803	4199	260434
+17.0	-90.0	"C. AMERICA & CARIBBEAN"	Renewable	5	0.000	40.363	29201	260434
+25.0	38.0	"MIDDLE EAST & N. AFRICA"	Coal	0	356.659	3.341	14229	1532806
+25.0	38.0	"MIDDLE EAST & N. AFRICA"	Oil	1	65.383	291.272	1240170	1532806
+25.0	38.0	"MIDDLE EAST & N. AFRICA"	Gas	2	4.176	61.211	260613	1532806
+25.0	38.0	"MIDDLE EAST & N. AFRICA"	Nuclear	3	4.176	0.000	0	1532806
+25.0	38.0	"MIDDLE EAST & N. AFRICA"	Hydroelectric	4	2.848	1.328	5653	1532806
+25.0	38.0	"MIDDLE EAST & N. AFRICA"	Renewable	5	0.000	2.848	12124	1532806
+50.0	-95.0	"NORTH AMERICA"	Coal	0	254.200	105.800	600275	2053057
+50.0	-95.0	"NORTH AMERICA"	Oil	1	167.857	86.342	489867	2053057
+50.0	-95.0	"NORTH AMERICA"	Gas	2	64.714	103.144	585206	2053057
+50.0	-95.0	"NORTH AMERICA"	Nuclear	3	25.888	38.826	220291	2053057
+50.0	-95.0	"NORTH AMERICA"	Hydroelectric	4	16.207	9.680	54923	2053057
+50.0	-95.0	"NORTH AMERICA"	Renewable	5	0.000	16.207	91945	2053057
+-10.0	-55.0	"SOUTH AMERICA"	Coal	0	341.204	18.796	29025	555962
+-10.0	-55.0	"SOUTH AMERICA"	Oil	1	117.616	223.589	345297	555962
+-10.0	-55.0	"SOUTH AMERICA"	Gas	2	70.412	47.203	72900	555962
+-10.0	-55.0	"SOUTH AMERICA"	Nuclear	3	68.540	1.868	2888	555962
+-10.0	-55.0	"SOUTH AMERICA"	Hydroelectric	4	40.504	28.037	43298	555962
+-10.0	-55.0	"SOUTH AMERICA"	Renewable	5	0.000	40.504	62553	555962
+-5.0	25.0	"SUB-SAHARAN AFRICA"	Coal	0	271.883	88.117	129456	528895
+-5.0	25.0	"SUB-SAHARAN AFRICA"	Oil	1	144.518	127.364	187118	528895
+-5.0	25.0	"SUB-SAHARAN AFRICA"	Gas	2	138.254	6.264	9203	528895
+-5.0	25.0	"SUB-SAHARAN AFRICA"	Nuclear	3	135.979	2.275	3345	528895
+-5.0	25.0	"SUB-SAHARAN AFRICA"	Hydroelectric	4	133.049	2.927	4302	528895
+-5.0	25.0	"SUB-SAHARAN AFRICA"	Renewable	5	0.000	133.049	195472	528895
+50.0	25.0	EUROPE	Coal	0	296.352	63.648	391517	2228407
+50.0	25.0	EUROPE	Oil	1	190.894	105.458	648678	2228407
+50.0	25.0	EUROPE	Gas	2	70.358	120.532	741413	2228407
+50.0	25.0	EUROPE	Nuclear	3	21.013	49.349	303542	2228407
+50.0	25.0	EUROPE	Hydroelectric	4	11.009	10.001	61526	2228407
+50.0	25.0	EUROPE	Renewable	5	0.000	11.009	67725	2228407
+-24.0	133.0	OCEANIA	Coal	0	99.130	260.870	155000	227112
+-24.0	133.0	OCEANIA	Oil	1	56.214	42.916	25500	227112
+-24.0	133.0	OCEANIA	Gas	2	10.771	45.443	27000	227112
+-24.0	133.0	OCEANIA	Nuclear	3	10.771	0.000	0	227112
+-24.0	133.0	OCEANIA	Hydroelectric	4	8.417	2.358	1400	227112
+-24.0	133.0	OCEANIA	Renewable	5	0.000	8.417	5000	227112
+
+
